@@ -85,8 +85,6 @@ Manual.
 
  o ROBOdoc documenting missing from lib/silcutil/silcfileutil.h.
 
- o ROBOdoc documenting missing from lib/silcutil/silcutil.h.
-
  o ROBOdoc documenting missing from lib/silccrypt/silchash.h.
 
  o ROBOdoc documenting missing from lib/silccrypt/silccipher.h.
